--- a/public/api.html
+++ b/public/api.html
@@ -52,7 +52,7 @@
       console.log('req:', req)
       return $.ajax({
         method: 'POST',
-        url: '/apis/call',
+        url: '/',
         data: JSON.stringify(req),
         contentType: 'application/json',
         datatype: 'json'
